imagen de mi empresa agregada

--- a/internas/contacto.html
+++ b/internas/contacto.html
@@ -13,7 +13,7 @@
     <a href="contacto.html">contacto</a>
     <a href="formulario.html">firmulario</a>
     <a href="nosotros.html">nosotros</a>
-
+<img src="../imgs/imgpc.jpg" alt="imagen de un ambiente">
 
 </body>
 </html>
