formulario de contacto agregado

--- a/internas/formulario.html
+++ b/internas/formulario.html
@@ -13,5 +13,14 @@
     <a href="contacto.html">contacto</a>
     <a href="formulario.html">firmulario</a>
     <a href="nosotros.html">nosotros</a>
+
+    <form>
+        <label for="usuario">usuario</label>
+        <input type="text" placeholder="ingresa tu usuario">
+        <label for="contraseña">contraseña</label>
+        <input type="password">
+        
+        <input type="submit" value="ingresar">
+    </form>
 </body>
 </html>
